<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Spinner
        android:id="@+id/mainPage_actionSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/mainPage_messageText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/mainPage_inputEditText"
            android:layout_below="@id/mainPage_messageText"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="2"
            android:visibility="gone"/>

        <Button
            android:id="@+id/mainPage_submitButton"
            android:layout_below="@id/mainPage_inputEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Submit"
            android:visibility="gone"/>

        <ProgressBar
            android:id="@+id/mainPage_progress"
            android:layout_toRightOf="@id/mainPage_submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

    </RelativeLayout>
</LinearLayout>
