<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:textSize="24sp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/settingPage_changeUserNameButton"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:textColor="#48f"
            android:layout_alignParentRight="true"

            android:text="@string/setting_changeUserName" />

        <TextView
            android:id="@+id/settingPage_userNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/settingPage_changeUserNameButton"
            android:textSize="36sp" />
    </RelativeLayout>


</LinearLayout>